; ModuleID = '/home/carl/AnghaBench/redis/deps/lua/src/extr_ltablib.c_foreachi.c'
source_filename = "/home/carl/AnghaBench/redis/deps/lua/src/extr_ltablib.c_foreachi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LUA_TFUNCTION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @foreachi to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @foreachi(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @aux_getn(i32* %6, i32 1)
  store i32 %7, i32* %5, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = load i32, i32* @LUA_TFUNCTION, align 4
  %10 = call i32 @luaL_checktype(i32* %8, i32 2, i32 %9)
  store i32 1, i32* %4, align 4
  br label %11

11:                                               ; preds = %33, %1
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* %5, align 4
  %14 = icmp sle i32 %12, %13
  br i1 %14, label %15, label %36

15:                                               ; preds = %11
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @lua_pushvalue(i32* %16, i32 2)
  %18 = load i32*, i32** %3, align 8
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @lua_pushinteger(i32* %18, i32 %19)
  %21 = load i32*, i32** %3, align 8
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @lua_rawgeti(i32* %21, i32 1, i32 %22)
  %24 = load i32*, i32** %3, align 8
  %25 = call i32 @lua_call(i32* %24, i32 2, i32 1)
  %26 = load i32*, i32** %3, align 8
  %27 = call i32 @lua_isnil(i32* %26, i32 -1)
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %30, label %29

29:                                               ; preds = %15
  store i32 1, i32* %2, align 4
  br label %37

30:                                               ; preds = %15
  %31 = load i32*, i32** %3, align 8
  %32 = call i32 @lua_pop(i32* %31, i32 1)
  br label %33

33:                                               ; preds = %30
  %34 = load i32, i32* %4, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* %4, align 4
  br label %11

36:                                               ; preds = %11
  store i32 0, i32* %2, align 4
  br label %37

37:                                               ; preds = %36, %29
  %38 = load i32, i32* %2, align 4
  ret i32 %38
}

declare dso_local i32 @aux_getn(i32*, i32) #1

declare dso_local i32 @luaL_checktype(i32*, i32, i32) #1

declare dso_local i32 @lua_pushvalue(i32*, i32) #1

declare dso_local i32 @lua_pushinteger(i32*, i32) #1

declare dso_local i32 @lua_rawgeti(i32*, i32, i32) #1

declare dso_local i32 @lua_call(i32*, i32, i32) #1

declare dso_local i32 @lua_isnil(i32*, i32) #1

declare dso_local i32 @lua_pop(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
